@@ -29,6 +29,47 @@ class ETreeXSLTTestCase(HelperTestCase):
 <foo>B</foo>
 ''',
                           st.tostring(res))
+
+    def test_xslt_utf8(self):
+        tree = self.parse(u'<a><b>\uF8D2</b><c>\uF8D2</c></a>')
+        style = self.parse('''\
+<xsl:stylesheet version="1.0"
+    xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+  <xsl:output encoding="UTF-8"/>
+  <xsl:template match="/">
+    <foo><xsl:value-of select="/a/b/text()" /></foo>
+  </xsl:template>
+</xsl:stylesheet>''')
+
+        st = etree.XSLT(style)
+        res = st.apply(tree)
+        expected = u'''\
+<?xml version="1.0" encoding="UTF-8"?>
+<foo>\uF8D2</foo>
+'''
+        self.assertEquals(expected,
+                          unicode(str(res), 'UTF-8'))
+
+    def test_xslt_encoding(self):
+        tree = self.parse(u'<a><b>\uF8D2</b><c>\uF8D2</c></a>')
+        style = self.parse('''\
+<xsl:stylesheet version="1.0"
+    xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+  <xsl:output encoding="UTF-16"/>
+  <xsl:template match="/">
+    <foo><xsl:value-of select="/a/b/text()" /></foo>
+  </xsl:template>
+</xsl:stylesheet>''')
+
+        st = etree.XSLT(style)
+        res = st.apply(tree)
+        expected = u'''\
+<?xml version="1.0" encoding="UTF-16"?>
+<foo>\uF8D2</foo>
+'''
+        self.assertEquals(expected,
+                          unicode(str(res), 'UTF-16'))
+
     def test_xslt_input(self):
         tree = self.parse('<a><b>B</b><c>C</c></a>')
         style = self.parse('''\
