@@ -19,6 +19,10 @@ Features added
 Bugs fixed
 ----------
 
+* str(xslt_result) was broken for output other than UTF-8
+
+* Memory leak if write_c14n fails to write the file after conversion
+
 * Crash in XMLSchema and RelaxNG when passing non-schema documents
 
 * Memory leak in RelaxNG() when RelaxNGParseError is raised
